fix masquerade bar overlap in rubric assnmt tray
this commit fixes the issue where the masquerade bar overlaps the footer
buttons in the rubric assignment search tray by adjusting the height of
the footer.

fixes EVAL-6068
flag=enhanced_rubrics

test plan:
- view the assignements page for an assignment.
- without masquerading, open the rubric assignment search tray and
  verify that the footer buttons are visible and look correct.
- masquerade as a student.
- open the rubric assignment search tray and verify that the footer
  buttons are visible and not overlapped by the masquerade bar.

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/399245
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Chris Soto <christopher.soto@instructure.com>
Product-Review: Yasi Afsharnive <yasaman.afsharnive@instructure.com>

--- a/app/stylesheets/bundles/enhanced_rubrics.scss
+++ b/app/stylesheets/bundles/enhanced_rubrics.scss
@@ -46,4 +46,10 @@ body.is-masquerading-or-student-view {
     // don't obstruct the "border" of the student view
     #{direction(right)}: 3px;
   }
+
+  // Ensure rubric assignment search tray footer buttons are not hidden behind masquerade bar
+  // by allowing the content to scroll down far enough to show the button above the bar
+  #rubric-search-footer-container {
+    height: calc(#{$rubric-builder-footer-height} + #{$student-view-banner-height});
+  }
 }
